[package]
name = 'g3k'
version = '0.1.0'
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = '1.0'
argh = '0.1'
chrono = '0.4'
crossbeam-channel = '0.5'
hex = '0.4'
num_cpus = '1.16'
pgp = '0.13'

[profile.release]
opt-level = 3
lto = true
